# SASRec

./: .gitignore  GUIDE.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/datasets/: beauty.yaml  ml-1m.yaml  steam.yaml  video_games.yaml
docs/superpowers/plans/: 2026-03-25-sasrec-python310-rewrite.md
docs/superpowers/specs/: 2026-03-25-sasrec-python310-rewrite-design.md
sasrec/: config.py  utils.py
sasrec/data/: data_info.py  dataset.py  preprocessor.py  sampler.py
sasrec/evaluation/: metrics.py
sasrec/model/: modules.py  sasrec.py
sasrec/trainer/: trainer.py
scripts/: preprocess.py  run_experiment.py  show_data_info.py
tests/: test_config.py  test_data_info.py  test_dataset.py  test_metrics.py  test_modules.py  test_preprocessor.py  test_sampler.py  test_sasrec.py  test_trainer.py
